# hipeac-gnnpilot-reproduce

./: .gitignore  CLAUDE.md  CMakeLists.txt  DSL_README.md  ENVIRONMENT_SETUP.md  QUICKSTART.md  README.md  REPRODUCTION_GUIDE.md  build_and_run.sh  build_complete.sh  download_datasets.py  download_suitesparse_datasets.py  dsl_run.py  example_gat_layer.txt  fifth_log.txt  first_output_log.txt  fix_dgl.sh  fourth_output.txt  gat.cu  report.tex  run.sh  run_full_reproduction.sh  second_output_log.txt  setup_environment.sh  sixth_output.txt  test_all_models.sh  test_multiple_datasets.sh  test_optimization_strategies.py  third_output.txt  visualize_output_log.txt  visualize_results.py
KG_GNN/: CMakeLists.txt  KG_GNN.py  cmake.sh  make.sh
KG_GNN/core/: clean.sh  setup.py
KG_GNN/core/include/: GPU_setup.h  KG_GNN.h  utils.h
KG_GNN/core/src/: KG_GNN.cpp  aggregate.cu  aggregate_gat.cu  aggregate_gat_new.cu  aggregate_gin.cu  aggregate_sddmm.cu  bin_pack.cu  flash_partition.cu  gnn_analysis.cpp  gnn_mm.cpp  gnn_run.cpp  mm.cu  mm_pipeline.cu  mm_pipeline.cu.bak  mm_static_shared.cu  preprocessing.cu  sample.cu  spmm_mm_pipeline.cu.bak  spmm_mm_pipeline_final_new.cu  spmm_mm_pipeline_new.cu
KG_GNN/roofline/: model.py
backend/generator/: foperator.py  gen_cmake.py  gen_expr.py  gen_func.py  gen_func_fused.py  gen_interface.py  gen_kernel.py  generate.py
backend/intermidiate/: graph_construct.py  var_check.py
backend/parser/: GNNop_def.py  KG_parser.py  compute_def.py  data_def.py
backend/utils/: utils.py
multi_dataset_results/: Erdos971_best.csv  Erdos971_full.csv  Erdos971_log.txt  add20_best.csv  add20_full.csv  add20_log.txt  bcsstk13_best.csv  bcsstk13_full.csv  bcsstk13_log.txt  ca-GrQc_best.csv  ca-GrQc_full.csv  ca-GrQc_log.txt  caidaRouterLevel_best.csv  caidaRouterLevel_full.csv  caidaRouterLevel_log.txt  combined_full_results.csv  combined_results.csv  delaunay_n10_best.csv  delaunay_n10_full.csv  delaunay_n10_log.txt  email-Enron_best.csv  email-Enron_full.csv  email-Enron_log.txt  ogbn-arxiv_best.csv  ogbn-arxiv_full.csv  ogbn-arxiv_log.txt  polbooks_best.csv  polbooks_full.csv  polbooks_log.txt
multi_dataset_results/plots/: performance_report.txt
preprocessing_src/: preprocessing.cu  preprocessing.h
reproduction_results/: e2e_results.csv  kernel_full_results.csv  kernel_results.csv  neighbor_packing_results.csv  reproduction_summary.md
reproduction_results/plots/: performance_report.txt
test/: build_KGGNN.sh  diagnose_ops.py  e2e_gat.py  e2e_gat_dataset.sh  e2e_gat_results  e2e_gmm_baseline.py  e2e_gmm_baseline_dgl.py  e2e_gmm_dataset.sh  e2e_gmm_dataset_baseline.sh  e2e_gmm_dataset_baseline_dgl.sh  load_dataset.py  perf_time.py  results_gather_arxiv.csv  similarity.py  test_csv.csv  test_gather_dim_kernel.py  test_gather_kernel.py  test_kernel.py  test_kernel_arxiv.csv  test_kernel_gat_baseline.py  test_kernel_gmm.py  test_kernel_gmm_baseline.py  test_scatter_kernel.py  utils.py
test/lib/: cusparse_test.py  dgl_test.py  ge_test.py  gnna_test.py  kg_test.py  pyg_test.py  ubg_test.py  ugcg_test.py
